# sp-project

./: CMakeLists.txt  jacobi.c  jacobi.h  kmeans.c  kmeans.h  kmeans_pp.py  matrix_calculations.c  matrix_calculations.h  setup.py  spkmeans.c  spkmeans.h  spkmeans.py  spkmeansmodule.c  useful.c  useful.h
